// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Line" renders (dark theme) 1`] = `
.emotion-0 {
  border: none;
  border-bottom: 1px solid rgb(236,240,242);
  margin-bottom: 16px;
  margin-top: 16px;
}

.emotion-1 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

<div
  className="emotion-1"
>
  <hr
    className="emotion-0"
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  border: none;
  border-bottom: 1px solid rgb(236,240,242);
  margin-bottom: 16px;
  margin-top: 16px;
}

<div
  className="emotion-1"
>
  <hr
    className="emotion-0"
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders with color 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  border: none;
  border-bottom: 1px solid #fb0807;
  margin-bottom: 16px;
  margin-top: 16px;
}

<div
  className="emotion-1"
>
  <hr
    className="emotion-0"
    color="#fb0807"
  >
    Line
  </hr>
</div>
`;
